[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menus/mp_discover/MultiplayerDiscover.gd" type="Script" id=1]

[node name="MultiplayerDiscover" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -492.0
margin_top = -280.0
margin_right = 492.0
margin_bottom = 280.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 984.0
margin_bottom = 560.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 944.0
margin_bottom = 520.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 944.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
margin_right = 944.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Multiplayer"
align = 1
valign = 1

[node name="Content" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 944.0
margin_bottom = 450.0
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer/Content"]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Tabs" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Join"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPAddress" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Join/VBoxContainer"]
margin_right = 936.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Join/VBoxContainer/IPAddress"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 1
text = "Host"
valign = 1

[node name="Value" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Join/VBoxContainer/IPAddress"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
text = "127.0.0.1"
align = 1

[node name="Port" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Join/VBoxContainer"]
margin_top = 50.0
margin_right = 936.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Join/VBoxContainer/Port"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 5
text = "Port"
valign = 1

[node name="Value" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Join/VBoxContainer/Port"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
text = "12345"
align = 1

[node name="JoinButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Join/VBoxContainer"]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 0
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Tabs" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Create"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPAddress" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Create/VBoxContainer"]
margin_right = 936.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Create/VBoxContainer/IPAddress"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
text = "External IP Address"
valign = 1

[node name="Value" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Create/VBoxContainer/IPAddress"]
margin_left = 204.0
margin_right = 304.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
text = "127.0.0.1"
align = 1
editable = false

[node name="Port" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Create/VBoxContainer"]
margin_top = 50.0
margin_right = 936.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Create/VBoxContainer/Port"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
size_flags_vertical = 1
text = "Port"
valign = 1

[node name="Value" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Create/VBoxContainer/Port"]
margin_left = 204.0
margin_right = 304.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
text = "12345"
align = 1

[node name="CreateButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Create/VBoxContainer"]
margin_top = 100.0
margin_right = 95.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 0
text = "Create Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 470.0
margin_right = 944.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Footer"]
margin_right = 54.0
margin_bottom = 50.0
text = "Return"
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Join/VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Content/TabContainer/Create/VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Footer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
